# api/http/openapi.yaml
@@ -70,6 +70,40 @@ paths:
                 $ref: "#/components/schemas/NewsItem"
         default:
           $ref: "#/components/responses/DefaultError"
+
+  /categories:
+    get:
+      operationId: GetCategories
+      summary: Get categories list
+      description: Get the list of all available categories
+      responses:
+        "200":
+          description: List of the categories
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Category"
+        default:
+          $ref: "#/components/responses/DefaultError"
+  /tags:
+    get:
+      operationId: GetTags
+      summary: Get tags list
+      description: Get the list of all available tags
+      responses:
+        "200":
+          description: List of the tags
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Tag"
+        default:
+          $ref: "#/components/responses/DefaultError"
+
 components:
 
   schemas:
